--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@types/babel__generator": "^7.27.0",
+    "@types/babel__template": "^7.4.4",
+    "@types/babel__traverse": "^7.20.7",
     "@types/firebase": "^2.4.32",
+    "@types/lodash": "^4.17.19",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
